--- a/fms_v3_project/templates/competitions.html
+++ b/fms_v3_project/templates/competitions.html
@@ -21,7 +21,7 @@
 <h3>Соревнования</h3>
 
 
-{#<a href="{{url_for('competition_create_new')}}"><button type="button" class="btn btn-primary">Создать</button></a>#}
+<a href="{{url_for( 'competitions.competition_create_new' )}}"><button type="button" class="btn btn-primary">Создать</button></a>
 
 <p></p>
 <table id="competitions_table" class="table table-striped table-bordered" style="width:100%">
