--- a/fms_v3_project/templates/competition.html
+++ b/fms_v3_project/templates/competition.html
@@ -12,77 +12,97 @@
     <div class="container" style="margin-top: 10px">
 
             <div class="row"> <!-- это ряд, в котором лежат два блока форма с соревнованием и блок с ссылками -->
-            <div class="col-lg-9 shadow p-3 mb-5 bg-white rounded"> <!-- это колонка с формой соревнования -->
+            <div class="col-lg shadow p-3 mb-5 bg-white rounded"> <!-- это колонка с формой соревнования -->
                 <nav aria-label="breadcrumb">
                   <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="{{url_for('competitions.competitions_view')}}">Список соревнований</a></li>
                     <li class="breadcrumb-item active" aria-current="page">{{ competition_data.competition_name }}</li>
                   </ol>
                 </nav>
-                <div class="row justify-content-center">
-                    <h3>{{ competition_data.competition_name }}</h3>
+                {% with messages = get_flashed_messages() %}
+                    {% if messages %}
+                    <ul style="padding-left: 0">
+                        {% for message in messages %}
+                        <div class="alert alert-success" role="alert">
+                            <li style="list-style-type: none;">{{ message }}</li>
+                        </div>
+                        {% endfor %}
+                    </ul>
+                    {% endif %}
+                {% endwith %}
+
+                <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
+                <h1 class="display-4 fw-normal">{{ competition_data.competition_name }}</h1>
+                <h2 class="display-6 fw-normal">{{competition_data.competition_city}} {{ competition_data.competition_date_start.strftime('%d.%m.%Y') }}</h2>
+
                 </div>
+                <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
+                  <div class="col">
+                    <div class="card mb-4 rounded-3 shadow-sm border-primary">
+                      <div class="card-header py-3">
+                        <h4 class="my-0 fw-normal">Регистрация</h4>
+                      </div>
+                      <div class="card-body">
+<!--                        <h2 class="card-title pricing-card-title">$0<small class="text-muted fw-light">/mo</small></h2>-->
+                        <ul class="list-unstyled mt-3 mb-4">
+                          <li>Регистрация участников</li>
+                          <li>соревнований</li>
+<!--                          <li>Email support</li>-->
+<!--                          <li>Help center access</li>-->
+                        </ul>
+                        <button type="button" class="w-100 btn btn-lg btn-outline-primary">Регистрация</button>
+                      </div>
+                    </div>
+                  </div>
 
-                <form method="POST"
-                      {# action="{{ url_for('competition_view', competition_id = competition_data.competition_id) }}" #}
-                >
-                    {{ form.csrf_token }}
-                        <div class="form-group">
-                            {{ form.competition_name_form.label }}
-                            {{ form.competition_name_form (class ='form-control', value = competition_data.competition_name)}}
-                        <br>
-                              {% for error in form.competition_name_form.errors %}
-                                <span style="color: red;">[{{ error }}]</span>
-                              {% endfor %}
-                        </div>
+                  <div class="col">
+                            <div class="card mb-4 rounded-3 shadow-sm border-primary">
+                                      <div class="card-header py-3">
+                                        <h4 class="my-0 fw-normal">Конструктор</h4>
+                                      </div>
+                                      <div class="card-body">
+<!--                                            <h1 class="card-title pricing-card-title">$29<small class="text-muted fw-light">/mo</small></h1>-->
+                                            <ul class="list-unstyled mt-3 mb-4">
+                                              <li>Конструктор кругов и </li>
+                                              <li>поединков</li>
 
-                        <div class="form-group">
-                            {{ form.competition_date_start.label }}
-                            {{ form.competition_date_start (class ='form-control', type="date", value = competition_data.competition_date_start)}}
-                        <br>
-                              {% for error in form.competition_date_start.errors %}
-                                <span style="color: red;">[{{ error }}]</span>
-                              {% endfor %}
-                        </div>
+                                            </ul>
+                                            <button type="button" class="w-100 btn btn-lg btn-outline-primary">Конструктор</button>
+                                      </div>
+                            </div>
+                  </div>
+                    <div class="col">
+                            <div class="card mb-4 rounded-3 shadow-sm border-primary">
+                                      <div class="card-header py-3">
+                                        <h4 class="my-0 fw-normal">Поединки</h4>
+                                      </div>
+                                      <div class="card-body">
+<!--                                            <h1 class="card-title pricing-card-title">$29<small class="text-muted fw-light">/mo</small></h1>-->
+                                            <ul class="list-unstyled mt-3 mb-4">
+                                              <li>Функционал судьи</li>
+                                              <li>на татами</li>
 
-                        <div class="form-group">
-                            {{ form.competition_date_finish.label }}
-                            {{ form.competition_date_finish (class ='form-control', type="date", value = competition_data.competition_date_finish)}}
-                        <br>
-                              {% for error in form.competition_date_start.errors %}
-                                <span style="color: red;">[{{ error }}]</span>
-                              {% endfor %}
-                        </div>
-
-                         <div class="form-group">
-                            {{ form.competition_city.label }}
-                            {{ form.competition_city (class ='form-control', type="text", value = competition_data.competition_city)}}
-                        <br>
-                              {% for error in form.competition_date_start.errors %}
-                                <span style="color: red;">[{{ error }}]</span>
-                              {% endfor %}
-                        </div>
-
-
-                         {{ form.submit (class ='btn btn-primary')}}
-
-
-                  </form>
+                                            </ul>
+                                            <button type="button" class="w-100 btn btn-lg btn-outline-primary">Поединки</button>
+                                      </div>
+                            </div>
+                  </div>
+                </div>
 
 
             </div> <!-- это конец колонки с формой соревнования -->
-            <div class="col-lg-3 shadow p-3 mb-5 bg-white rounded"> <!-- это колонка с ссылками -->
-                    <h4 style="text-align: center">Ссылки</h4>
-                {#<p><a href="{{url_for('fights')}}">Поединки</a></p>#}
-                {# <p><a href="{{url_for('registration', competition_id = competition_data.competition_id)}}">Регистрация</a></p> #}
-                {# <p><a href="{{url_for('competition_fights_view', comp_id = competition_data.competition_id)}}">Поединки</a></p> #}
-                {# <p><a href="{{url_for('fight_constructor', comp_id = competition_data.competition_id)}}">Конструктор</a></p> #}
-              <hr>
-               {# <a href="{{url_for('download_comp_result', filename="comp_result.xlsx")}}"><button type="button" class="btn btn-outline-primary">Результаты боев. Excel</button></a> #}
+<!--            <div class="col-lg-3 shadow p-3 mb-5 bg-white rounded"> &lt;!&ndash; это колонка с ссылками &ndash;&gt;-->
+<!--                    <h4 style="text-align: center">Ссылки</h4>-->
+<!--                {#<p><a href="{{url_for('fights')}}">Поединки</a></p>#}-->
+<!--                {# <p><a href="{{url_for('registration', competition_id = competition_data.competition_id)}}">Регистрация</a></p> #}-->
+<!--                {# <p><a href="{{url_for('competition_fights_view', comp_id = competition_data.competition_id)}}">Поединки</a></p> #}-->
+<!--                {# <p><a href="{{url_for('fight_constructor', comp_id = competition_data.competition_id)}}">Конструктор</a></p> #}-->
+<!--              <hr>-->
+<!--               {# <a href="{{url_for('download_comp_result', filename="comp_result.xlsx")}}"><button type="button" class="btn btn-outline-primary">Результаты боев. Excel</button></a> #}-->
 
 
 
-            </div> <!-- это конец колонки с фильтрами -->
+<!--            </div> &lt;!&ndash; это конец колонки с фильтрами &ndash;&gt;-->
         </div>
 
 
