--- a/fms_v3_project/templates/competitions.html
+++ b/fms_v3_project/templates/competitions.html
@@ -27,24 +27,28 @@
 <table id="competitions_table" class="table table-striped table-bordered" style="width:100%">
         <thead>
             <tr>
-                <th>№</th>
-                <th>Наименование</th>
-                <th>Дата начала</th>
-                <th>Дата завершения</th>
+<!--                <th>№</th>-->
+                <th>Наименование турнира</th>
+                <th>Дата</th>
                 <th>Город</th>
             </tr>
         </thead>
         <tbody>
         {% for competition_row in competitions_data %}
             <tr>
-                <td>{{ competition_row.competition_id }}</td>
+<!--                <td>{{ competition_row.competition_id }}</td>-->
                 <td>
-                    {#<a href="{{url_for('competition_view', competition_id = competition_row.competition_id)}}">#}
+
+                    <a href="{{url_for('competitions.competition_view', competition_id = competition_row.competition_id)}}">
                           {{ competition_row.competition_name }}
-<!--                    </a>-->
+                    </a>
                 </td>
-                <td>{{ competition_row.competition_date_start.strftime('%d.%m.%Y') }}</td>
-                <td>{{ competition_row.competition_date_finish.strftime('%d.%m.%Y')}}</td>
+                {% if competition_row.competition_date_start == competition_row.competition_date_finish %}
+                    <td>{{ competition_row.competition_date_start.strftime('%d.%m.%Y') }}</td>
+                {% else %}
+                    <td>{{ competition_row.competition_date_start.strftime('%d.%m.%Y') }} - {{ competition_row.competition_date_finish.strftime('%d.%m.%Y')}}</td>
+                {% endif %}
+
                 <td>{{ competition_row.competition_city}}</td>
             </tr>
         {% endfor %}
@@ -65,7 +69,11 @@
 
 <script>
     $(document).ready(function() {
-        $('#competitions_table').DataTable();
+        $('#competitions_table').DataTable(
+            {
+        "order": [[ 1, "desc" ]]
+    }
+        );
 } );
 </script>
 
