--- a/fms_v3_project/templates/competitions.html
+++ b/fms_v3_project/templates/competitions.html
@@ -31,6 +31,7 @@
                 <th>Наименование турнира</th>
                 <th>Дата</th>
                 <th>Город</th>
+                <th></th>
             </tr>
         </thead>
         <tbody>
@@ -50,11 +51,32 @@
                 {% endif %}
 
                 <td>{{ competition_row.competition_city}}</td>
+                <td><button data-id='{{competition_row.competition_id}}' class="userinfo btn-sm btn-success">edit</button></td>
             </tr>
         {% endfor %}
-
-
     </table>
+
+    <div class="modal fade" id="competition_edit_modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Соревнование</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+
+              </div>
+
+            </div>
+          </div>
+    </div>
+
+
+
+
+
 
 </div>
 
@@ -72,8 +94,23 @@
         $('#competitions_table').DataTable(
             {
         "order": [[ 1, "desc" ]]
-    }
-        );
+    });
+        $('.userinfo').click(function(){
+            var competition_id = $(this).data('id');
+            console.log(competition_id)
+            $.ajax({
+            url: '/ajaxfile',
+            type: 'post',
+            data: {competition_id: competition_id},
+            success: function(data){
+                $('.modal-body').html(data);
+                $('.modal-body').append(data.htmlresponse);
+                $('#competition_edit_modal').modal('show');
+            }
+        });
+
+        });
+
 } );
 </script>
 
