--- a/fms_v3_project/templates/competitions.html
+++ b/fms_v3_project/templates/competitions.html
@@ -6,7 +6,8 @@
 
 {% block head %}
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.css">
-<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.24/css/dataTables.bootstrap4.min.css">
+{#<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.24/css/dataTables.bootstrap4.min.css">#}
+<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.min.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
 {#<link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">#}
@@ -28,6 +29,25 @@
 <a href="{{url_for( 'competitions.competition_create_new' )}}"><button type="button" class="btn btn-primary">Создать</button></a>
 
 <p></p>
+
+{% with messages = get_flashed_messages() %}
+    {% if messages %}
+    <ul style="padding-left: 0">
+        {% for message in messages %}
+            <div class="alert alert-success alert-dismissible fade show" role="alert">
+                  <li style="list-style-type: none;">{{ message }}</li>
+                  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+{#        <div class="alert alert-success" role="alert">#}
+{#            <li style="list-style-type: none;">{{ message }}</li>#}
+{#        </div>#}
+        {% endfor %}
+    </ul>
+    {% endif %}
+{% endwith %}
+
 <table id="competitions_table" class="table table-striped table-bordered" style="width:100%">
         <thead>
             <tr>
@@ -56,9 +76,9 @@
 
                 <td>{{ competition_row.competition_city}}</td>
                 <td>
-                    <button data-id='{{competition_row.competition_id}}' class="userinfo btn-sm btn-success"><i class="fa fa-edit"></i></button>
+                    <button data-id='{{competition_row.competition_id}}' class="edit_comp btn-sm btn-success"><i class="fa fa-edit"></i></button>
 
-                <button button data-id='{{competition_row.competition_id}}' class="btn btn-sm btn-danger"><i class="fa fa-edit"></i></button>
+                <button data-id='{{competition_row.competition_id}}' class="userinfo btn btn-sm btn-danger"><i class="fa fa-trash"></i></button>
 
                 </td>
 
@@ -90,22 +110,31 @@
 
 </div>
 
+{#<script src="https://code.jquery.com/jquery-3.5.1.js"></script>#}
+{#<script type="text/javascript" src="https://cdn.datatables.net/v/bs4/dt-1.10.24/datatables.min.js" defer></script>#}
+
 <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-<script type="text/javascript" src="https://cdn.datatables.net/v/bs4/dt-1.10.24/datatables.min.js" defer></script>
+{#<script src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js" defer></script>#}
+<script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js " defer></script>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script>
+{#<script src="https://cdn.datatables.net/1.10.24/js/dataTables.bootstrap4.min.js"></script>#}
 
 
 
-{#<script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-<script src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js" defer></script>
-<script src="https://cdn.datatables.net/1.10.24/js/dataTables.bootstrap4.min.js"></script>#}
 
 <script>
     $(document).ready(function() {
         $('#competitions_table').DataTable(
             {
-        "order": [[ 1, "desc" ]]
+        "order": [[ 1, "desc" ]],
+        {#"pagingType": "full_numbers",#}
+        language: {
+            url: 'dataTables.russian.json'
+        }
+
     });
-        $('.userinfo').click(function(){
+        $('.edit_comp').click(function(){
             var competition_id = $(this).data('id');
             console.log(competition_id)
             $.ajax({
