--- a/fms_v3_project/templates/competition.html
+++ b/fms_v3_project/templates/competition.html
@@ -6,6 +6,7 @@
 
 {% block head %}
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.css">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
 {% endblock %}
 
 {% block content %}
