--- a/fms_v3_project/templates/competitions.html
+++ b/fms_v3_project/templates/competitions.html
@@ -77,8 +77,7 @@
                 <td>{{ competition_row.competition_city}}</td>
                 <td>
                     <button data-id='{{competition_row.competition_id}}' class="edit_comp btn-sm btn-success"><i class="fa fa-edit"></i></button>
-
-                <button data-id='{{competition_row.competition_id}}' class="userinfo btn btn-sm btn-danger"><i class="fa fa-trash"></i></button>
+                    <button data-id='{{competition_row.competition_id}}' class="delete_comp_button btn btn-sm btn-danger"><i class="fa fa-trash"></i></button>
 
                 </td>
 
@@ -96,6 +95,23 @@
                 </button>
               </div>
               <div class="modal-body">
+
+              </div>
+
+            </div>
+          </div>
+    </div>
+
+    <div class="modal fade" id="competition_delete_modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Удаление соревнования</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body" id="modal_body_delete_html">
 
               </div>
 
@@ -136,7 +152,7 @@
     });
         $('.edit_comp').click(function(){
             var competition_id = $(this).data('id');
-            console.log(competition_id)
+
             $.ajax({
             url: '/ajaxfile',
             type: 'post',
@@ -145,6 +161,22 @@
                 $('.modal-body').html(data);
                 $('.modal-body').append(data.htmlresponse);
                 $('#competition_edit_modal').modal('show');
+            }
+        });
+
+        });
+        {# удаление соревнования #}
+        $('.delete_comp_button').click(function(){
+            var competition_id = $(this).data('id');
+            {#console.log(competition_id)#}
+            $.ajax({
+            url: '/ajaxfile_delete_comp',
+            type: 'post',
+            data: {competition_id: competition_id},
+            success: function(data){
+                $('#modal_body_delete_html').html(data);
+                $('#modal_body_delete_html').append(data.htmlresponse);
+                $('#competition_delete_modal').modal('show');
             }
         });
 
