--- a/fms_v3_project/templates/base.html
+++ b/fms_v3_project/templates/base.html
@@ -24,11 +24,11 @@
       </li>
 
       <li class="nav-item">
-        {# <a class="nav-link" href="{{url_for('competitions')}}">Соревнования</a> #}
+        <a class="nav-link" href="{{url_for('competitions.competitions_view')}}">Соревнования</a>
       </li>
 
         <li class="nav-item">
-            {#<a class="nav-link" href="{{url_for('participants')}}">Участники</a> #}
+            <a class="nav-link" href="{{url_for('fighters.fighters_view')}}">Бойцы в системе</a>
         </li>
 
       <li class="nav-item">
