--- a/fms_v3_project/templates/fighters.html
+++ b/fms_v3_project/templates/fighters.html
@@ -54,6 +54,7 @@
 <script>
     $(document).ready(function() {
         $('#fighters_table').DataTable({
+            stateSave: true,
             "language": {
             "url": "{{ url_for('static', filename='ru.json') }}"
         }
