--- a/fms_v3_project/templates/competitions.html
+++ b/fms_v3_project/templates/competitions.html
@@ -143,6 +143,7 @@
     $(document).ready(function() {
         $('#competitions_table').DataTable(
             {
+                stateSave: true,
         "order": [[ 1, "desc" ]],
         {#"pagingType": "full_numbers",#}
         "language": {
