--- a/fms_v3_project/templates/fighter_edit.html
+++ b/fms_v3_project/templates/fighter_edit.html
@@ -64,7 +64,7 @@
                                 </div>
                                 <div class="form-group">
                                     {{ form.birthday_form.label }}
-                                    {{ form.birthday_form (class ='form-control', type="date")}}
+                                    {{ form.birthday_form (class ='form-control', type="date", value = fighter_data.birthday)}}
                                 <br>
                                       {% for error in form.birthday_form.errors %}
                                         <span style="color: red;">[{{ error }}]</span>
